[gd_scene load_steps=4 format=2]

[ext_resource path="res://Systems/Classes/UI/_building_blocks/Dialogue/Dialogue.tscn" type="PackedScene" id=1]
[ext_resource path="res://Systems/Classes/Level/_building_blocks/ZoneDialogue/ZoneDialogue.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="ZoneDialogue" type="Area2D"]
script = ExtResource( 2 )

[node name="Offset" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -50 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue" parent="CanvasLayer" instance=ExtResource( 1 )]
margin_top = -180.0
margin_bottom = 52.0
[connection signal="body_entered" from="." to="." method="_on_ZoneDialogue_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ZoneDialogue_body_exited"]
[connection signal="completed" from="CanvasLayer/Dialogue" to="." method="_on_Dialogue_completed"]
